font, alignment issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,6 +19,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: "Lexend", sans-serif;
   /* background: linear-gradient(
       to bottom,
       transparent,
@@ -139,7 +141,7 @@ body {
   font-size: 1.125rem !important;
   line-height: 1.75rem !important;
   background-color: transparent !important;
-  font-family: Roboto, sans-serif !important;
+  /* font-family: Roboto, sans-serif !important; */
   margin: 0 !important;
 }
 
